Changed openapi.yaml for comments
