# src/routes/commentsRoutes.js
@@ -2,11 +2,13 @@ const express = require('express');
 const router = express.Router();
 
 const {authMiddleware} = require("../middlewares/authMiddleware");
-const {updateComment, deleteComment} = require("../controllers/commentsController");
+const {updateComment, deleteComment, getComments, createComment} = require("../controllers/commentsController");
 
 
-router.put('/{commentsId}', authMiddleware, updateComment);
-router.delete("/{commentId}", authMiddleware, deleteComment);
+router.get("/:commentId/comments", authMiddleware, getComments);
+router.post("/:commentId", authMiddleware, createComment);
+router.put('/:commentsId', authMiddleware, updateComment);
+router.delete("/:commentId", authMiddleware, deleteComment);
 
 module.exports = {
     commentsRoutes: router,
